# monotask

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  P2P_Kanban_Execution_Plan_v2.md  README.md
.claude/: settings.json  statusline.sh
.claude/agents/analysis/: code-analyzer.md
.claude/agents/core/: coder.md  planner.md  researcher.md  reviewer.md  tester.md
.claude/agents/dual-mode/: codex-coordinator.md  codex-worker.md  dual-orchestrator.md
.claude/agents/github/: code-review-swarm.md  github-modes.md  issue-tracker.md  multi-repo-swarm.md  pr-manager.md  project-board-sync.md  release-manager.md  release-swarm.md  repo-architect.md  swarm-issue.md  swarm-pr.md  sync-coordinator.md  workflow-automation.md
.claude/agents/goal/: agent.md  code-goal-planner.md  goal-planner.md
.claude/agents/hive-mind/: collective-intelligence-coordinator.md  queen-coordinator.md  scout-explorer.md  swarm-memory-manager.md  worker-specialist.md
.claude/agents/optimization/: benchmark-suite.md  load-balancer.md  performance-monitor.md  resource-allocator.md  topology-optimizer.md
.claude/agents/sona/: sona-learning-optimizer.md
.claude/agents/specialized/: blockchain-security-auditor.md
.claude/agents/sublinear/: consensus-coordinator.md  matrix-optimizer.md  pagerank-analyzer.md  performance-optimizer.md  trading-predictor.md
.claude/agents/swarm/: adaptive-coordinator.md  hierarchical-coordinator.md  mesh-coordinator.md
.claude/commands/: monobrain-help.md  monobrain-memory.md  monobrain-swarm.md
.claude/helpers/: README.md  adr-compliance.sh  auto-memory-hook.mjs  context-persistence-hook.mjs  daemon-manager.sh  ddd-tracker.sh  extras-registry.json  github-setup.sh  guidance-hook.sh  guidance-hooks.sh  health-monitor.sh  hook-handler.cjs  intelligence.cjs  learning-hooks.sh  learning-optimizer.sh  learning-service.mjs  memory-palace.cjs  memory.cjs  metrics-db.mjs  pattern-consolidator.sh  perf-worker.sh  quick-start.sh  router.cjs  security-scanner.sh  session.cjs  setup-mcp.sh  skill-registry.json  statusline.cjs  swarm-comms.sh  swarm-hooks.sh  swarm-monitor.sh  sync-v3-metrics.sh  toggle-statusline.cjs  token-tracker.cjs  update-v3-progress.sh  v3-quick-status.sh  v3.sh  validate-v3-config.sh  worker-manager.sh
.github/workflows/: release.yml
.monobrain/: .gitignore  CAPABILITIES.md  config.yaml  daemon-state.json  last-route.json  registry.json  routing-feedback.jsonl  trigger-index.json
.monobrain/knowledge/: .index-hash  chunks.jsonl
.monobrain/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v1-progress.json
.monobrain/palace/: drawers.jsonl  kg.json
.monobrain/security/: audit-status.json
.monobrain/worker-dispatch/: pending-1776414142227.json  pending-1776682277004.json  pending-1776682659350.json  pending-1776682675973.json  pending-1776682907564.json  pending-1776683458220.json  pending-1776759460002.json  pending-1776762330240.json  pending-1776763440934.json  pending-1777045422105.json  pending-1777126350169.json  pending-1777132234634.json  pending-1777133851122.json  pending-1777149259402.json  pending-1777150101536.json  pending-1777151149052.json  pending-1777153872738.json  pending-1777153976732.json  pending-1777153996032.json  pending-1777154205126.json  pending-1777155788298.json  pending-1777156780510.json  pending-1777198326019.json  pending-1777199636525.json  pending-1777201221993.json  pending-1777201814657.json  pending-1777236642759.json  pending-1777240835304.json  pending-1777241180427.json  pending-1777241554676.json  pending-1777242380060.json  pending-1777242821616.json  pending-1777243093163.json  pending-1777244259121.json  pending-1777244975108.json  pending-1777246257677.json  pending-1777246284046.json  pending-1777246292482.json  pending-1777279576018.json  pending-1777280541865.json  (+37 more)
.monomind/: .gitignore  CAPABILITIES.md  config.yaml  registry.json
.monomind/metrics/: learning.json  swarm-activity.json  v1-progress.json
.monomind/security/: audit-status.json
.swarm/: schema.sql  state.json
crates/kanban-cli/: Cargo.toml
crates/kanban-cli/src/: main.rs
crates/kanban-cli/tests/: board_column_test.rs  card_test.rs  cli_comment_checklist_test.rs  phase1_smoke_test.rs  scaffold_smoke_test.rs  space_test.rs
crates/kanban-core/: Cargo.toml
crates/kanban-core/src/: board.rs  card.rs  card_number.rs  chat.rs  checklist.rs  clock.rs  column.rs  comment.rs  lib.rs  migration.rs  space.rs
crates/kanban-crypto/: Cargo.toml
crates/kanban-crypto/src/: lib.rs
crates/kanban-net/: Cargo.toml
crates/kanban-net/src/: discovery.rs  lib.rs  swarm.rs  sync_protocol.rs
crates/kanban-net/tests/: sync_test.rs
crates/kanban-storage/: Cargo.toml
crates/kanban-storage/src/: board.rs  card_number.rs  lib.rs  schema.rs  space.rs
crates/kanban-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/kanban-tauri/src-tauri/capabilities/: default.json
crates/kanban-tauri/src-tauri/icons/: icon.icns
crates/kanban-tauri/src-tauri/src/: lib.rs  main.rs
crates/monotask-cli/: Cargo.toml
crates/monotask-cli/src/: lib.rs  main.rs
crates/monotask-cli/tests/: phase1_smoke_test.rs  profile_test.rs
crates/monotask-core/: Cargo.toml
crates/monotask-crypto/: Cargo.toml
crates/monotask-crypto/src/: lib.rs
crates/monotask-github/: Cargo.toml
crates/monotask-github/src/: lib.rs
crates/monotask-linear/: Cargo.toml
crates/monotask-linear/src/: lib.rs
crates/monotask-net/: Cargo.toml
crates/monotask-net/src/: behaviour.rs  lib.rs  swarm.rs
crates/monotask-net/tests/: sync_test.rs
crates/monotask-storage/: Cargo.toml
crates/monotask-storage/src/: board.rs  card_number.rs  lib.rs  space.rs
crates/monotask-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/monotask-tauri/src-tauri/.monobrain/data/: pending-insights.jsonl  ranked-context.json
crates/monotask-tauri/src-tauri/.monobrain/sessions/: current.json
crates/monotask-tauri/src-tauri/src/: main.rs
docs/: improvements-plan-v2.md  improvements-plan.md  p2p-chat-architecture.md
(+143 files in other folders)
