[workspace]
members = [
    "crates/kanban-core",
    "crates/kanban-crypto",
    "crates/kanban-net",
    "crates/kanban-storage",
    "crates/kanban-cli",
    "crates/kanban-tauri/src-tauri",
]
resolver = "2"

[workspace.dependencies]
automerge   = "0.5"
rusqlite    = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ciborium    = "0.2"
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
uuid        = { version = "1", features = ["v4", "v7"] }
hex         = "0.4"
base32      = "0.4"
bs58        = "0.5"
sha2        = "0.10"
ssh-key     = { version = "0.6", features = ["ed25519"] }
base64      = "0.22"
regex       = "1"
chrono      = { version = "0.4", features = ["serde"] }
rand        = "0.8"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
tabled      = "0.15"
colored     = "2"
tempfile    = "3"
dirs        = "5"

