[package]
name = "kanban-core"
version = "0.3.7"
edition = "2021"

[dependencies]
automerge  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
hex        = { workspace = true }
base32     = { workspace = true }
base64     = { workspace = true }
regex      = { workspace = true }
chrono     = { workspace = true }
rand       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
