[package]
name = "kanban-crypto"
version = "0.3.2"
edition = "2021"

[dependencies]
kanban-core   = { path = "../kanban-core" }
ed25519-dalek = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
hex           = { workspace = true }
base32        = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
ciborium      = { workspace = true }
uuid          = { workspace = true }
bs58          = { workspace = true }
sha2          = { workspace = true }
ssh-key       = { workspace = true }
