[package]
name = "kanban-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
hex           = { workspace = true }
base32        = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
ciborium      = { workspace = true }
