[package]
name = "kanban-cli"
version = "0.3.8"
edition = "2021"

[[bin]]
name = "app-cli"
path = "src/main.rs"

[dependencies]
kanban-core    = { path = "../kanban-core" }
kanban-crypto  = { path = "../kanban-crypto" }
kanban-storage = { path = "../kanban-storage" }
clap           = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tabled         = { workspace = true }
colored        = { workspace = true }
tracing        = { workspace = true }
dirs           = { workspace = true }
automerge      = { workspace = true }
uuid           = { workspace = true }
base64         = { workspace = true }
rusqlite       = { workspace = true }
tokio          = { workspace = true }
kanban-net     = { path = "../kanban-net" }

[target.'cfg(unix)'.dependencies]
libc           = "0.2"

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }
