[package]
name = "monotask-cli"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "monotask"
path = "src/main.rs"

[dependencies]
monotask-core    = { path = "../monotask-core" }
monotask-github  = { path = "../monotask-github" }
monotask-linear  = { path = "../monotask-linear" }
monotask-crypto  = { path = "../monotask-crypto" }
monotask-storage = { path = "../monotask-storage" }
clap           = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tabled         = { workspace = true }
colored        = { workspace = true }
tracing        = { workspace = true }
dirs           = { workspace = true }
automerge      = { workspace = true }
uuid           = { workspace = true }
base64         = { workspace = true }
rusqlite       = { workspace = true }
tokio          = { workspace = true }
monotask-net   = { path = "../monotask-net" }

[target.'cfg(unix)'.dependencies]
libc           = "0.2"

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }
