[package]
name = "monotask-crypto"
version = "0.4.0"
edition = "2021"

[dependencies]
monotask-core = { path = "../monotask-core" }
ed25519-dalek = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
hex           = { workspace = true }
base32        = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
ciborium      = { workspace = true }
uuid          = { workspace = true }
bs58          = { workspace = true }
sha2          = { workspace = true }
ssh-key       = { workspace = true }
