[package]
name = "monotask-linear"
version = "1.1.0"
edition = "2021"

[dependencies]
monotask-core = { path = "../monotask-core" }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
chrono        = { workspace = true }
automerge     = { workspace = true }
dirs          = { workspace = true }
uuid          = { workspace = true }
hex           = { workspace = true }
