[package]
name = "monotask-net"
version = "0.4.5"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp", "quic", "noise", "yamux",
    "mdns", "kad", "relay", "dcutr", "autonat",
    "request-response", "identify",
    "tokio", "macros",
] }
monotask-core    = { path = "../monotask-core" }
monotask-crypto  = { path = "../monotask-crypto" }
monotask-storage = { path = "../monotask-storage" }
automerge   = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
ciborium    = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
