[package]
name = "monotask-storage"
version = "1.1.1"
edition = "2021"

[dependencies]
automerge    = { workspace = true }
rusqlite     = { workspace = true }
monotask-core  = { path = "../monotask-core" }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
monotask-core = { path = "../monotask-core" }
