[package]
name = "monotask"
version = "0.3.13"
edition = "2021"

[lib]
name = "kanban_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "monotask"
path = "src/main.rs"

[dependencies]
kanban-core    = { path = "../../kanban-core" }
kanban-crypto  = { path = "../../kanban-crypto" }
kanban-storage = { path = "../../kanban-storage" }
kanban-net     = { path = "../../kanban-net" }
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
rusqlite       = { workspace = true }
base64         = { workspace = true }
uuid           = { workspace = true }
automerge      = { workspace = true }
dirs           = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
