[package]
name = "monotask"
version = "1.1.1"
edition = "2021"

[lib]
name = "monotask_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "monotask"
path = "src/main.rs"

[dependencies]
monotask-core    = { path = "../../monotask-core" }
monotask-github  = { path = "../../monotask-github" }
monotask-linear  = { path = "../../monotask-linear" }
monotask-crypto  = { path = "../../monotask-crypto" }
monotask-storage = { path = "../../monotask-storage" }
monotask-net     = { path = "../../monotask-net" }
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
rusqlite       = { workspace = true }
base64         = { workspace = true }
uuid           = { workspace = true }
automerge      = { workspace = true }
dirs           = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
